--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
     "react-datepicker": "^0.41.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "react-redux-fetch": "^0.8.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-widgets": "^3.4.6",
+    "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
+    "redux-form-material-ui": "^4.1.2",
+    "redux-form-website-template": "0.0.41",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
